# chipolata

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run.sh
src/: emu.cpp  emu.hpp  main.cpp
